syntax = "proto3";

package helloworld;

option go_package = "./proto;helloworld";

import "proto/helloworld/info.proto";

service Helloworld {
    rpc InsertInfo (Info) returns (Info) {}
	rpc DeleteInfo (InfoFilter) returns (Info) {}
    rpc UpdateInfo (Info) returns (Info) {}
    rpc QueryInfo (InfoFilter) returns (InfoList) {}
    rpc QueryInfoDetail (InfoFilter) returns (Info) {}
}
